k8s-configuration/istio_ingress.yaml
## nginx_ingress_REST_rules.yaml

---

apiVersion: extensions/v1beta1
kind: Ingress
metadata:
  annotations:
    kubernetes.io/ingress.class: "istio"
    #nginx.ingress.kubernetes.io/ssl-redirect: "true"
  name: gateway
  namespace: shippy-grpc
spec:
  tls:
  - hosts:
    - shippy.example.com
    secretName: shippy-secret
  rules:
  - host: shippy.example.com
    http:
      paths:
      - path: /ui
        backend:
          serviceName: client
          servicePort: 5000
      - path: /getConsignment
        backend:
          serviceName: client
          servicePort: 5000
      - path: /getVessel
        backend:
          serviceName: client
          servicePort: 5000
